// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stroke > can be cleared 1`] = `
[
  {
    "args": [
      0,
      0,
      50,
      60,
    ],
    "method": "clearRect",
  },
]
`;

exports[`stroke > can be removed 1`] = `<div />`;

exports[`stroke > can draw points 1`] = `
[
  {
    "args": [],
    "method": "save",
  },
  {
    "args": [],
    "method": "beginPath",
  },
  {
    "args": [
      110,
      12,
    ],
    "method": "moveTo",
  },
  {
    "args": [
      10,
      12,
      100,
      0,
      360,
    ],
    "method": "arc",
  },
  {
    "args": [],
    "method": "fill",
  },
  {
    "args": [],
    "method": "restore",
  },
  {
    "args": [],
    "method": "save",
  },
  {
    "args": [],
    "method": "beginPath",
  },
  {
    "args": [
      105.2,
      0,
    ],
    "method": "moveTo",
  },
  {
    "args": [
      5.2,
      0,
      100,
      0,
      360,
    ],
    "method": "arc",
  },
  {
    "args": [],
    "method": "fill",
  },
  {
    "args": [],
    "method": "restore",
  },
]
`;

exports[`stroke > can draw strokes 1`] = `
[
  {
    "args": [],
    "method": "save",
  },
  {
    "args": [],
    "method": "beginPath",
  },
  {
    "args": [
      3,
      2,
    ],
    "method": "moveTo",
  },
  {
    "args": [
      2,
      4,
    ],
    "method": "lineTo",
  },
  {
    "args": [
      5,
      1,
    ],
    "method": "lineTo",
  },
  {
    "args": [
      9,
      0,
    ],
    "method": "lineTo",
  },
  {
    "args": [],
    "method": "stroke",
  },
  {
    "args": [],
    "method": "restore",
  },
  {
    "args": [],
    "method": "save",
  },
  {
    "args": [],
    "method": "beginPath",
  },
  {
    "args": [
      10,
      0,
    ],
    "method": "moveTo",
  },
  {
    "args": [
      0,
      0,
    ],
    "method": "lineTo",
  },
  {
    "args": [
      1,
      1,
    ],
    "method": "lineTo",
  },
  {
    "args": [
      1,
      0,
    ],
    "method": "lineTo",
  },
  {
    "args": [],
    "method": "stroke",
  },
  {
    "args": [],
    "method": "restore",
  },
]
`;

exports[`stroke > creates its DOM and set up the canvas scale 1`] = `
<div>
  <canvas
    height="240"
    style="position: absolute; left: 0px; top: 0px; width: 50px; height: 60px; pointer-events: none;"
    width="200"
  />
</div>
`;
